회원탈퇴 API 추가, 회원가입 EndPoint 변경 (#27)
* add: 기본적인 문서화 반영

* add: 사용자 삭제 API

* add: token도 정리하도록 반영

* up: 코드 가독성 개선

* fix: 잘못된 column 지정 수정

* fix: 카카오톡 소셜 테이블 삭제 로직
